--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
+### config/routes.yaml
 controllers:
     resource:
         path: ../src/Controller/
@@ -6,4 +7,8 @@ controllers:
     prefix:
         fr: /fr
         en: /en
+
+default_route:
+    path: /
+    controller: App\Controller\ProductController::home
 
